--- a/views/client/lienhe/lienhe.ejs
+++ b/views/client/lienhe/lienhe.ejs
@@ -78,7 +78,7 @@
                                                     <textarea name="message" placeholder="Nội dung"></textarea>
                                                 </div>
                                                 <div class="single-register" align="center">
-                                                    <input type="submit" name="btn btn-primary" value="Gửi góp ý">
+                                                    <input class="btn-login" type="submit" name="btn btn-primary" value="Gửi góp ý">
                                                 </div>
                                             </div>
                                         </div>
