--- a/views/client/partials/head.ejs
+++ b/views/client/partials/head.ejs
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href='client/css/flexslider.css'>
     <!-- chosen.min.css-->
     <link rel="stylesheet" href='client/css/chosen.min.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.1.0/themes/algolia.css" />
     <!-- style css -->
     <link rel="stylesheet" href='client/style.css'>
     <!-- responsive css -->
@@ -29,5 +30,5 @@
     <!-- modernizr css -->
     <script src='js/vendor/modernizr-2.8.3.min.js'></script>
     <!-- <meta name="google-signin-client_id" content="969464741521-e5205v7a4tvnoqccono6a931htunjpkq.apps.googleusercontent.com"> -->
-    
+   
 </head>
