--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -7,21 +7,15 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="language-area">
                         <ul>
-                            <li><img src="client/img/flag/1.jpg" alt="flag" /><a href="#">Ngôn ngữ<i class="fa fa-angle-down"></i></a>
+                            <li><img src="client/img/product/35phu1.jpg" style="width: 18px; height: 12px;" alt="flag" /><a href="#">Danh mục<i class="fa fa-angle-down"></i></a>
                                 <div class="header-sub">
                                     <ul>
-                                        <li><a href="#"><img src="client/img/flag/2.jpg" alt="flag" />france</a></li>
-                                        <li><a href="#"><img src="client/img/flag/3.jpg" alt="flag" />croatia</a></li>
+                                        <li><a href="/donghonam"><img src="client/img/product/2.jpg" style="width: 18px; height: 12px;" alt="flag" />Đồng hồ nam</a></li>
+                                        <li><a href="/donghonu"><img src="client/img/product/3.jpg" style="width: 18px; height: 12px;" alt="flag" />Đồng hồ nữ</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">USD $<i class="fa fa-angle-down"></i></a>
-                                <div class="header-sub dolor">
-                                    <ul>
-                                        <li><a href="#">EUR €</a></li>
-                                        <li><a href="#">USD $</a></li>
-                                    </ul>
-                                </div>
+                            <li><a href="#">Quản lý tài khoản</a>
                             </li>
                         </ul>
                     </div>
