--- a/views/client/tintuc/tintuc.ejs
+++ b/views/client/tintuc/tintuc.ejs
@@ -17,7 +17,7 @@
                         <input type="text" name="text" value="<%= sp.tgtao %>"><br><br>
                         <a href="#"><img src="client/img/tintuc/<%= sp.hinhanh %>" alt="man" /></a><br><br>
                         <h3><span><%= sp.tieude %></span></h3>
-                        <p><%= sp.noidung %></p><hr><hr>
+                        <pre><%= sp.noidung %></pre><hr><hr>
                     </div>
                     <% }) %>
                 </div>
