--- a/public/client/style.css
+++ b/public/client/style.css
@@ -393,7 +393,7 @@ body {
     top: 120%;
     transition: all 0.3s ease 0s;
     visibility: hidden;
-    width: 100px;
+    width: 160px;
     z-index: 234;
 }
 .language-area ul li .header-sub.dolor {
@@ -5008,7 +5008,7 @@ nav.menu .cr-dropdown ul {
     width: 100%;
     font-family: 'Rufina', serif;
     font-weight: 400;
-    color: #fff;
+    /* color: #fff; */
 }
 .login-form .single-login a {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
@@ -5207,7 +5207,7 @@ nav.menu .cr-dropdown ul {
 .contact-form form .single-form-3 input,
 .contact-form .single-form-3 textarea {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-    border: 1px solid #eceff8;
+    border: 1px solid #5e5a5e;
     font-size: 14px;
     margin-bottom: 16px;
     padding: 12px 10px;
@@ -6626,4 +6626,8 @@ span.buttonText {
  .comment_block .new_comment .love:hover {
 	 color: #ff6347;
 }
- 
+
+.btn-login{
+    background-color: #EB088A;
+    color: #E7E7E7;
+}
