--- a/views/client/dangnhap/dangnhap.ejs
+++ b/views/client/dangnhap/dangnhap.ejs
@@ -25,7 +25,7 @@
                                                 <input type="password" id="password" name="password" />
                                             </div>
                                             <div class="single-login single-login-2">
-                                                <input type="submit" name="btn btn-primary" value="Đăng nhập" />
+                                                <input class="btn-login" type="submit" name="btn btn-primary" value="Đăng nhập" />
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-6">
