chuc nang quan ly tai khoan

--- a/views/client/giohang/giohang.ejs
+++ b/views/client/giohang/giohang.ejs
@@ -25,6 +25,7 @@
                             <div class="col-lg-12">
                                 <form action="#" method="post">
                                     <div class="table-content table-responsive">
+                                        <a href="/"><button name="button" type="button" >Tiếp tục mua hàng</button></a>
                                         <table>
                                             <thead>
                                                 <tr>
@@ -64,13 +65,15 @@
                                         </table>
                                     </div>
                                 </form>
+                                
                             </div>
                         </div>
-                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                <div class="wc-proceed-to-checkout">
-                                        <a href="/donhang">Thanh toán</a>
-                                </div>
+                        
+                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                            <div class="wc-proceed-to-checkout">
+                                    <a href="/donhang">Thanh toán</a>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
