--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -15,15 +15,17 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Quản lý tài khoản</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="account-area text-right">
                         <ul>
-                            <li><a href="/dangnhap">Đăng nhập</a></li>
+                            <% if(tenkh && tenkh != ''){%>
+                                <li><a href="/canhan?idkh=<%= idkh ? idkh : 0 %>"><%= tenkh %></a></li>
+                            <%} else{ %>
+                                <li><a href="/dangnhap">Đăng nhập</a></li>
+                           <% } %>
                             <li><a href="/dangky">Đăng ký</a></li>
                             <li><a href="/dangnhap/logout">Đăng xuất</a></li>
                         </ul>
