--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -497,11 +497,15 @@
     let mess = '<%= mess %>';
     
     if(mess && mess == 1){
-        alert('Đăng ký thành công !');
+        alert('Đăng ký thành công!');
     }
 
     if(mess && mess == 2){
-        alert('Thanh toán thành công !');
+        alert('Thanh toán thành công!');
+    }
+
+    if(mess && mess == 3){
+        alert('Cập nhật thông tin thành công!');
     }
 </script>
 <!-- Load Facebook SDK for JavaScript -->
