--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -33,6 +33,12 @@
                                             </div>
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
+                                                    <label>Email <span class="required">*</span></label>
+                                                    <input type="email" id="email" name="email">
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                <div class="checkout-form-list">
                                                     <textarea style="resize:none;" class="form-control" placeholder="Ghi chú" id="note" name="note" required=""></textarea>
                                                 </div>
                                             </div>
