chuc nang lich su mua hang

--- a/views/client/khuyenmai/khuyenmai.ejs
+++ b/views/client/khuyenmai/khuyenmai.ejs
@@ -288,12 +288,14 @@
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                                 <div class="block-newsletter">
-                                    <h2>Sign up for send newsletter</h2>
-                                    <p>You can be always up to date with our company new!</p>
-                                    <form action="#">
+                                    <h2>KHUYẾN MÃI CỰC LỚN</h2>
+                                    <p>Mua sắm thả ga, không lo về giá!</p>
+                                    <p>Giảm giá ngút trời, ưu đãi tuyệt vời!</p>
+                                    <br /><br /> <br /> <br />
+                                    <!-- <form action="#">
                                         <input type="text" placeholder="Enter your email address" />
                                     </form>
-                                    <a href="#">Send Email</a>
+                                    <a href="#">Send Email</a> -->
                                 </div>
                             </div>
                         </div>
