--- a/public/client/style.css
+++ b/public/client/style.css
@@ -5516,6 +5516,7 @@ nav.menu .cr-dropdown ul {
     margin: 0 0 50px;
     text-align: center;
     width: 100%;
+    color: #000;
 }
 
 .table-content table th,
