--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -15,6 +15,8 @@
                                     </ul>
                                 </div>
                             </li>
+
+                            <li><a href="/lichsumuahang">Lịch sử mua hàng</a></li>
                         </ul>
                     </div>
                 </div>
