--- a/views/client/chitietsp/chitietsp.ejs
+++ b/views/client/chitietsp/chitietsp.ejs
@@ -74,20 +74,26 @@
                                                         <a href="#"><i class="fa fa-pie-chart"></i></a>
                                                         <a href="#"><i class="fa fa-envelope-o"></i></a>
                                                     </div>
-                                                    <!-- <div class="col-md-12">
-                                                        <p>
-                                                            <h4>Mô tả: </h4>
-                                                            <%= indexct[0].mota %>
-                                                        </p>
-                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <p>
                                                 <h4>Mô tả: </h4>
-                                                <pre><%= indexct[0].mota %></pre> 
-                            
+                                                <p style="  width: 100%; 
+                                                            text-align: justify;
+                                                            background-color: transparent;
+                                                            border: none; overflow: hidden; 
+                                                            word-wrap: break-word;
+                                                            white-space: pre-wrap;
+                                                            white-space: -moz-pre-wrap !important;
+                                                            white-space: -pre-wrap;
+                                                            white-space: -o-pre-wrap;
+                                                            font-family: 'times new roman', times, serif;
+                                                            font-size: 17px;
+                                                            color: #000;
+                                                            line-height: 25px;"><%= indexct[0].mota %>
+                                                </p>
                                             </p>
                                         </div>
                                     </div>
