--- a/views/client/partials/menuleft.ejs
+++ b/views/client/partials/menuleft.ejs
@@ -51,7 +51,20 @@
         <div class="col-md-12">
             <h3 class="text-center">MÔ TẢ THƯƠNG HIỆU</h3>
             <p class="text-centerthuonghieu" style="text-align: justify;">
-                <%= motatt %>
+                <p style="   width: 100%; 
+                                    text-align: justify;
+                                    background-color: transparent;
+                                    border: none; overflow: hidden; 
+                                    word-wrap: break-word;
+                                    white-space: pre-wrap;
+                                    white-space: -moz-pre-wrap !important;
+                                    white-space: -pre-wrap;
+                                    white-space: -o-pre-wrap;
+                                    font-family: 'times new roman', times, serif;
+                                    font-size: 17px;
+                                    color: #000;
+                                    line-height: 25px;"><%= motatt %>
+                </p>
             </p>
         </div>
     </div>
